--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="playerName">Имя</label>
         <input type="text" id="playerName" value="Игрок 1">
         <p>
-            <button id="startButton" onclick="initGame(document.getElementById('playerName').value)">Начать игру</button>
+            <button id="startButton" onclick="gameModule.initGame(document.getElementById('playerName').value)">Начать игру</button>
         </p>
 
     </fieldset>
